definecont.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: rss-site
 labels:
  app: web

spec:
 containers:
  - name: front-end
    image: nginx
    ports:
     - containerPort: 80
 imagePullPolicy: IfNotPresent
  - name: rss-reader
    image: nickchase/rss-php-nginx:v1
    ports:
     - containerPort: 80
 imagePullPolicy: IfNotPresent

'''
container section keyworkds:
    name
    image
    command
    args
    workingDir
    ports
    env
    resources
    volumeMounts
    livenessProbe
    readinessProbe
    livecycle
    terminationMessagePath
    imagePullPolicy
    securityContext
    stdin
    stdinOnce
    tty

'''
