nginx_awsvol.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: adhocpod1
 labels:              #  this is for using  in service section for end point creation 
  app: web

spec:
 containers:
  - name: front-end
    image: nginx
    volumeMounts:
     - mountPath: /myvol
       name: myvolume
    ports:
     - containerPort: 80
    imagePullPolicy: IfNotPresent
 volumes:
  - name: myvolume
    awsElasticBlockStore:
     volumeID: vol-01efe3302ebd6c137
