nginx_hostpathvol.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: adhocpodhostvol
 labels:              #  this is for using  in service section for end point creation 
  app: web

spec:
 containers:
  - name: testvol
    image: nginx
    volumeMounts:
     - mountPath: /usr/share/nginx/html
       name: myvolume
    ports:
     - containerPort: 80
    imagePullPolicy: IfNotPresent
 volumes:
  - name: myvolume
    hostPath:
     path: /vol
     type: directory
