nginx_podtype.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: adhocpod1
 labels:              #  this is for using  in service section for end point creation 
  app: web

spec:
 containers:
  - name: front-end
    image: nginx
    ports:
     - containerPort: 80
    imagePullPolicy: IfNotPresent
