nginx_podtype1.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: adhocpod2
 labels:
  app: web

spec:
 containers:
  - name: front-end
    image: nginx
    ports:
     - containerPort: 80
    imagePullPolicy: IfNotPresent
