webingress2.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webingress2
  labels:
   app: web2

spec:
  containers:
  - image: nginx
    name: test-container2
    ports:
    - containerPort: 80
    imagePullPolicy: IfNotPresent    
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: test-volume2
  volumes:
  - name: test-volume2
    hostPath:
      # directory location on host
      path: /home/docker/volume
      # this field is optional
      type: Directory
