nginx_deployment_hostvol_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service-volume
  labels:
    run: webappsdep
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webappsdep
