nginx_hostvol_pod_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service-volume2
  labels:
    run: hostvol
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: hostvol
