webingress1_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service-service1
  labels:
    run: web1
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: web1
