webingress2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service2
  labels:
    run: web2
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: web2
