webingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - backend:
          serviceName: web-service-service1
          servicePort: 80
  - host: green.example.com
    http:
      paths:
      - backend:
          serviceName: web-service2
          servicePort: 80
